chore: update parent POM and BOM configurations
- Update platform-parent pom.xml with latest dependency versions
- Update platform-bom with consolidated dependency management
- Update README.md with project documentation improvements
- Cleanup and standardize Maven configurations